cf-env/templates/namespace.yaml
#@ load("@ytt:overlay", "overlay")
#@ load("_ytt.lib.yaml", "labels")

---
apiVersion: v1
kind: Namespace
metadata:
  name: cf-env
  labels: #@ labels("namespace")

#@overlay/match by=overlay.all, expects="1+"
---
#@overlay/match missing_ok=True
metadata:
  #@overlay/match missing_ok=True
  namespace: cf-env

#@overlay/match by=overlay.subset({"kind":"Namespace", "metadata":{"name":"cf-env"}}), expects=1
---
metadata:
  #@overlay/match missing_ok=True
  labels:
    #@overlay/match missing_ok=True
    namespace.kubernetes.io/name: cf-env
