cf-env/templates/httproute.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yaml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("domain is missing or invalid")
#@ end
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cf-env
  namespace: cf-env
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: cf-env
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ "cf-env." + host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: cf-env
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cf-env
  namespace: cf-env
  labels: #@ labels("security-policy")
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: cf-env
  oidc:
    provider:
      issuer: https://dex.jamesclonk.io/dex # TODO: template via plato!!!
    clientID: envoy-gateway
    clientSecret:
      name: cf-env-oidc-client-secret
    redirectURL: https://cf-env.jamesclonk.io/oauth2/callback # TODO: template via plato!!!
    logoutPath: /logout
