cf-env/templates/ingress.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("configuration.ingress.domain is missing or invalid")
#@ end
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-env
  namespace: cf-env
  labels: #@ labels("ingress")
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - secretName: cf-env-tls
    hosts:
    #@ for/end host in data.values.configuration.ingress.domains:
    - #@ "cf-env." + host
  rules:
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "cf-env." + host
    http:
      paths:
      - backend:
          service:
            name: cf-env
            port:
              number: 80
        path: /
        pathType: Prefix
